# volume-forecasting-poc

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-01-04-volume-forecasting-design.md  2026-01-04-volume-forecasting-implementation.md  2026-01-05-enhanced-features-design.md  2026-01-05-ensemble-model-design.md  2026-01-05-event-features-implementation.md  2026-01-05-event-features-integration-design.md  2026-01-05-full-hyperparameter-tuning-design.md  2026-01-05-hyperparameter-tuning-design.md  2026-01-06-feature-optimization-design.md  2026-01-06-feature-optimization-implementation.md
notebooks/: 01_data_exploration.ipynb  02_external_data.ipynb  03_feature_engineering.ipynb  04_baseline_models.ipynb  05_statistical_models.ipynb  06_ml_models.ipynb  07_model_comparison.ipynb  08_final_forecast.ipynb  08_hyperparameter_tuning.ipynb  09_feature_optimization.ipynb
src/volume_forecast/: __init__.py
src/volume_forecast/config/: __init__.py  constants.py  settings.py
src/volume_forecast/data_generation/: __init__.py  base.py  generator.py
src/volume_forecast/evaluation/: __init__.py  comparison.py  metrics.py  validation.py
src/volume_forecast/external_data/: __init__.py  aggregator.py  base.py  football.py  holidays.py  static_events.py
src/volume_forecast/features/: __init__.py  base.py  events.py  lags.py  pipeline.py  rolling.py  temporal.py
src/volume_forecast/models/: __init__.py  base.py  baselines.py  ensemble.py  prophet_model.py  registry.py  statistical.py  tree_models.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_data_generation.py  test_evaluation.py  test_external_data.py  test_features.py  test_models.py
