[project]
name = "volume-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juanlu.rgarcia@gmail.com", email = "juanlu.rgarcia@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
